# Speech-optimization

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  WORKFLOW_TESTING_GUIDE.md  gunicorn.conf.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: benchmark-regression.yml  ci.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
artifacts/: benchmark_history.json  benchmark_history_clean.json  benchmark_history_regression.json
configs/: default.yaml  model_config.py  profiling_config.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  nginx.conf
notebooks/: README.md
scripts/: benchmark.py  compare_benchmark_history.py  export_onnx.py  optimize_model.py  profile_latency.py  profile_model.py  profile_nsight.py  setup.ps1  test_api.py  visualize_benchmark.py
src/: __init__.py  _optional_imports.py
src/models/: __init__.py  asr_pipeline.py  inference.py  loader.py
src/optim/: __init__.py  inference_optimizer.py  quantization.py  tensorrt_utils.py
src/profiling/: __init__.py  benchmark.py  profiler.py
src/serving/: __init__.py  app.py  config.py  main.py  schemas.py
tests/: conftest.py  test_api.py  test_compare_benchmark_history.py  test_models.py  test_optimization.py  test_profile_nsight.py  test_profiling.py
